<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="teeu.android.autolocationrecorderpublic.view.friend.FriendViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_text"
                android:imeOptions="actionSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/edit_text_email_search"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/image_view_delete"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_baseline_clear_24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/delete" />

            <Button
                android:id="@+id/button_search"
                android:onClick="@{v -> viewModel.searchFriend(v)}"
                android:text="@string/search"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_layout_second"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_layout">

            <TextView
                android:id="@+id/text_view_search_result"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@{viewModel.result}"/>

            <Button
                android:id="@+id/button_add"
                android:onClick="@{v -> viewModel.addFriend(v)}"
                android:text="@string/add"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:id="@+id/divider_first"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_second"/>

        <TextView
            android:id="@+id/text_view_friend_request_list"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_request_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_first"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="8dp"
            android:id="@+id/recycler_view_request"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/text_view_friend_request_list"/>

        <View
            android:id="@+id/divider_second"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_request"/>

        <TextView
            android:id="@+id/text_view_friend_list"
            android:layout_marginVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_second"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="8dp"
            android:id="@+id/recycler_view_friend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/text_view_friend_list"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>