<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="teeu.android.autolocationrecorderpublic.view.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_notice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/settings_notice"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_first"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/text_view_notice_title" />


        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@id/divider_first" >
            <TextView
                android:id="@+id/text_view_notice_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/settings_notice_body"
                android:textSize="16sp"
                />

        </ScrollView>


        <View
            android:id="@+id/divider_second"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/scroll_view" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_onoff"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:checked="false"

            android:textColor="#000000"
            android:text="@string/auto_location_record"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/divider_second" />

        <View
            android:id="@+id/divider_third"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/switch_onoff" />

        <TextView
            android:id="@+id/text_view_delete_coin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:textColor="#000000"
            android:text="@string/delete_coin"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintEnd_toStartOf="@id/text_view_delete_coin_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_onoff"/>

        <TextView
            android:id="@+id/text_view_delete_coin_count"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@{viewModel.coin.toString()}"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_onoff"
            app:layout_constraintStart_toEndOf="@id/text_view_delete_coin"/>

        <View
            android:id="@+id/divider_fourth"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@id/text_view_delete_coin" />

        <TextView
            android:id="@+id/text_view_login_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:text="@{viewModel.state}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_loginout" />

        <Button
            android:id="@+id/button_loginout"
            android:text="@{viewModel.signInOut}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>